--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="유상욱의 포트폴리오" />
+        <meta name="author" content="유상욱" />
+
+        <meta property="og:title" content="멈추지 않는 개발자, 유상욱"/>
+        <meta property="og:type" content="article"/>
+        <meta property="og:url" content="https://sangwookyoo.github.io/"/>
+        <meta property="og:description" content="유상욱의 포트폴리오"/>
+        <meta property="og:image" content="assets/img/thumbnail.png"/>
+        <meta property="og:image:width" content="1850" />
+        <meta property="og:image:height" content="935" />
+
         <title>멈추지 않는 개발자, 유상욱</title>
         <link rel="shortcut icon" type="image/x-icon" href="https://image.flaticon.com/icons/svg/13/13706.svg">
         <!-- Font Awesome icons (free version)-->
