--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="description" content="유상욱의 포트폴리오" />
         <meta name="author" content="유상욱" />
 
-        <meta property="og:title" content="멈추지 않는 개발자, 유상욱"/>
-        <meta property="og:type" content="article"/>
+        <meta property="og:title" content="유상욱의 포트폴리오"/>
+        <meta property="og:type" content="article website"/>
         <meta property="og:url" content="https://sangwookyoo.github.io/"/>
-        <meta property="og:description" content="유상욱의 포트폴리오"/>
+        <meta property="og:description" content="멈추지 않는 개발자, 유상욱"/>
         <meta property="og:image" content="assets/img/thumbnail.png"/>
         <meta property="og:image:width" content="1850" />
         <meta property="og:image:height" content="935" />
