--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="유상욱" />
 
         <meta property="og:title" content="유상욱의 포트폴리오"/>
-        <meta property="og:type" content="article website"/>
+        <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://sangwookyoo.github.io/"/>
         <meta property="og:description" content="멈추지 않는 개발자, 유상욱"/>
         <meta property="og:image" content="assets/img/thumbnail.png"/>
