--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="유상욱의 포트폴리오" />
         <meta name="author" content="유상욱" />
-
+        <!-- Open Graph-->
         <meta property="og:title" content="유상욱의 포트폴리오"/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="https://sangwookyoo.github.io/"/>
@@ -40,8 +40,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
@@ -62,7 +62,7 @@
                     <p class="lead mb-5">To Infinity, and Beyond!
                         <br>I want be Client Programmer.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://github.com/YouSangwook"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/SangwookYoo"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/profile.php?id=100004611421209"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/sang_woooook/?hl=ko"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -118,8 +118,8 @@
                             <h3 class="mb-0">Xicom Lab.</h3>
                             <div class="mb-3">학부연구생 · <a href="http://xicomlab.re.kr">homepage</a></div>
                             <p>성결대학교 Visual Computing 연구실입니다.
-                                <br>지도교수: 미디어소프트웨어학과 진성아 교수
-                                <br>참여연구: 버블아트 XR (eXtended Reality) 팹랩재현을 위한 물리기반 시·촉각 렌더링</p>
+                                <br>- 지도교수: 미디어소프트웨어학과 진성아 교수
+                                <br>- 참여연구: 버블아트 XR (eXtended Reality) 팹랩재현을 위한 물리기반 시·촉각 렌더링</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2019.11 - 현재</span></div>
                     </div>
@@ -129,8 +129,8 @@
                             <h3 class="mb-0">한이음</h3>
                             <div class="mb-3">ICT멘토링 멘티 · <a href="https://www.hanium.or.kr/portal/index.do">homepage</a></div>
                             <p>ICT기업전문가(멘토)와 팀을 이루어 프로젝트를 수행하는 ICT실무 역량 향상 멘토링 프로그램입니다.
-                                <br>지도멘토: 전자부품연구원 최효섭 책임연구원
-                                <br>프로젝트: 가상현실 기술을 활용한 동화 체험 시스템</p>
+                                <br>- 지도멘토: 전자부품연구원 최효섭 책임연구원
+                                <br>- 프로젝트: 가상현실 기술을 활용한 동화 체험 시스템</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020.05 - 2020.11</span></div>
                     </div>
@@ -148,16 +148,6 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">발표실적</h3>
-                            <div class="mb-3"></div>
-                            <p><div><sub>(IICCC 2020 국제학술대회 / 2020.07.16 - 2020.07.18)</sub><br>- Physics-based height map for virtual soap bubble rendering</div>
-                                <div><sub>(한국정보처리학회 추계학술대회 / 2020.11.06 - 2020.11.07)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div>
-                                <div><sub>(한이음 학술대회 / 2020.11.19)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div></p>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
                             <h3 class="mb-0">봉사활동</h3>
                             <div class="mb-3"></div>
                             <p><div><sub>(문혜장애인요양원 / 20.01.24 6H)</sub><br>- 설 명절행사 자원봉사</div>
@@ -165,6 +155,47 @@
                                 <div><sub>(문혜장애인요양원 / 20.03.28 4H)</sub><br>- 생활인 정서지원 프로그램 보조진행</div>
                                 <div><sub>(문혜장애인요양원 / 20.04.23 7H)</sub><br>- 장애인의날 기념행사 자원봉사</p>
                         </div>
+                    </div>
+
+                </div>
+            </section>
+
+            <hr class="m-0" />
+            <!-- Projects-->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">버블아트 XR 팹랩 재현을 위한 물리기반 시·촉각 렌더링</h3>
+                            <div class="mb-3">Xicom Lab. 한국연구재단 기초연구 (3년차 연구)<br>
+                                <a href="#projects">ongoing project</a></div>
+                            <p>물리기반 비눗방울 렌더링으로 구현된 버블아트 팹랩 시스템입니다.
+                                <br>- 개발환경: Unity 3D 2019.3.5 · HTC VIVE · Leap Motion
+                                <br>- 개발도구: (HDRP)Shader Graph · Steam VR
+                                <br>- 개발인원: 3명
+                                <br>- 의사소통: 주간 세미나 · Zoom Meetings
+                                <br>- 나의역할: PBR, VR/AR, 컨텍스트
+                                <br>- 달성성과: 물리기반 비눗방울 렌더링 구현 · 논문게재</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020.01.06 - 현재</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">가상현실 기술을 활용한 동화 체험 시스템</h3>
+                            <div class="mb-3">과학기술정보통신부 한이음 ICT멘토링 프로젝트<br>
+                                <a href="#projects">video</a> · 
+                                <a href="#projects">github</a></div>
+                             <p>플레이어가 직접 상호작용이 가능한 체험형 멀티플레이 VR동화입니다.
+                                <br>- 개발환경: Unity 3D 2019.3.5 · HTC VIVE
+                                <br>- 개발도구: Steam VR
+                                <br>- 개발인원: 4명
+                                <br>- 의사소통: 한이음 팀블로그 · gitlab · Discord
+                                <br>- 나의역할: PM, VR, 멀티플레이
+                                <br>- 달성성과: 논문게재 · 프로그램 등록 · 한이음 공모전 · 한이음 학술대회  · 한이음 인기상 · 정보처리학회 추계학술대회</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020.05.13 - 2020.11.30</span></div>
                     </div>
 
                 </div>
@@ -205,60 +236,42 @@
             </section>
 
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="projects">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Projects</h2>
-                    <p>I'm getting ready.</p>
-                    <p class="mb-0">I'm getting ready.</p>
-                </div>
-            </section>
-
-            <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            (장려상) 창업 아이디어 경진대회&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <sub>창업교육센터 (2020.12.15)</sub>
+                            <div><sub>(창업교육센터 / 2020.12.15)</sub><br>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>장려상 - 창업 아이디어 경진대회</div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            (최우수상) Sungkyul Creative Challenge&nbsp;&nbsp;&nbsp;&nbsp;
-                            <sub>교수학습지원센터(2020.12.14)</sub>
+                            <div><sub>(교수학습지원센터 / 2020.12.14)</sub><br>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>최우수상 - Sungkyul Creative Challenge</div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            (최우수상) 한이음 학술대회&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <sub>한국정보산업합회 (2020.12.04)</sub>
+                            <div><sub>(정보통신기획평가원 / 2020.12.04)</sub><br>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>은상 - 한이음 공모전</div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            (은상) 한이음 공모전&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <sub>정보통신기획평가원 (2020.12.04)</sub>
+                            <div><sub>(한국정보산업연합회 / 2020.12.04)</sub><br>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>최우수상 - 한이음 학술대회</div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            (대상) 정보처리학회 추계학술대회&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <sub>한국정보처리학회 (2020.11.06)</sub>
+                            <div><sub>(한국정보처리학회 / 2020.11.06)</sub><br>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>대상 - 정보처리학회 추계학술대회</div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            (최우수상) 창의융합 튜터링&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <sub>교수학습지원센터 (2020.08.31)</sub>
+                            <div><sub>(미디어소프트웨어학과 / 2020.08.31)</sub><br>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>최우수상 - 창의융합 튜터링</div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            (장려상) VGA 콘텐츠 기획 해커톤 경진대회&nbsp;&nbsp;
-                            <sub>미디어소프트웨어학과 (2019.10.24)</sub>
+                            <div><sub>(미디어소프트웨어학과 / 2019.10.24)</sub><br>
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>장려상 - VGA 콘텐츠 기획 해커톤 경진대회</div>
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-award text-warning"></i></span>
-                            DIAT Expert 예비강사&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <sub>한국정보통신진흥협회 (2015.03.20)</sub>
+                            <div><sub>(한국정보통신진흥협회 / 2015.03.20)</sub><br>
+                                <span class="fa-li"><i class="fas fa-award text-warning"></i></span>DIAT Expert 예비강사</div>
                         </li>
                     </ul>
                 </div>
@@ -270,7 +283,7 @@
             <center>
                 <br>Copyright 2021. SANGWOOK YOO. All pictures cannot be copied without permission.
             <div class="social-icons"><br>
-                <a class="js-scroll-trigger" href="#about"><i class="fa fa-chevron-up"></i></a>
+                <a class="js-scroll-trigger" href="#page-top"><i class="fa fa-chevron-up"></i></a>
             </div></center><br>
          </footer>
 
