--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta property="og:image:height" content="935" />
 
         <title>멈추지 않는 개발자, 유상욱</title>
-        <link rel="shortcut icon" type="image/x-icon" href="https://image.flaticon.com/icons/svg/13/13706.svg">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/img/unity.svg">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -172,7 +172,7 @@
                                 <a href="#projects">ongoing project</a></div>
                             <p>물리기반 비눗방울 렌더링으로 구현된 버블아트 팹랩 시스템입니다.
                                 <br>- 개발환경: Unity 3D 2019.3.5 · HTC VIVE · Leap Motion
-                                <br>- 개발도구: (HDRP)Shader Graph · Steam VR
+                                <br>- 개발도구: Shader Graph · Steam VR
                                 <br>- 개발인원: 3명
                                 <br>- 의사소통: 주간 세미나 · Zoom Meetings
                                 <br>- 나의역할: PBR, VR/AR, 컨텍스트
@@ -217,8 +217,12 @@
                         <li class="list-inline-item"><i class="fab fa-unity"></i></li>
                     </ul>
 
-                    <div class="mb-3">ETC</div>
+                    <div class="mb-3">Library</div>
                     <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Shader Graph
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             OpenCV
@@ -226,10 +230,6 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             OpenGL
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            (HDRP/LWRP) Shader Graph
                         </li>
                     </ul>
                 </div>
@@ -262,7 +262,7 @@
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>대상 - 정보처리학회 추계학술대회</div>
                         </li>
                         <li>
-                            <div><sub>(미디어소프트웨어학과 / 2020.08.31)</sub><br>
+                            <div><sub>(교수학습지원센터 / 2020.08.31)</sub><br>
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>최우수상 - 창의융합 튜터링</div>
                         </li>
                         <li>
@@ -281,7 +281,7 @@
         <!-- Footer-->
         <footer>
             <center>
-                <br>Copyright 2021. SANGWOOK YOO. All pictures cannot be copied without permission.
+                <br>Copyright 2021. SANGWOOK YOO. All rights reserved.
             <div class="social-icons"><br>
                 <a class="js-scroll-trigger" href="#page-top"><i class="fa fa-chevron-up"></i></a>
             </div></center><br>
