--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <div class="mb-3">학부연구생 · <a href="http://xicomlab.re.kr">homepage</a></div>
                             <p>성결대학교 Visual Computing 연구실입니다.
                                 <br>- 지도교수: 미디어소프트웨어학과 진성아 교수
-                                <br>- 참여연구: 버블아트 XR (eXtended Reality) 팹랩재현을 위한 물리기반 시·촉각 렌더링</p>
+                                <br>- 참여연구: 버블아트 XR 팹랩재현을 위한 물리기반 시·촉각 렌더링</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2019.11 - 현재</span></div>
                     </div>
@@ -139,10 +139,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">눈문실적</h3>
                             <div class="mb-3"></div>
-                            <p><div><sub>(국제문화기술진흥원)</sub><br>- Physics-based height map for virtual soap bubble rendering</div>
-                                <div><sub>(한국정보처리학회)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div>
-                                <div><sub>(Taylor & Francis)</sub><br>- Physically based soap bubble synthesis for VR <sub>심사중</sub></div>
-                                <div><sub>(국제문화기술진흥원)</sub><br>- Bubble Art in Realistic Content <sub>심사중</sub></div></p>
+                            <p><div><sub>(SCI / Taylor & Francis)</sub><br>- Physically based soap bubble synthesis for VR</div>
+                                <div><sub>(KCI / 국제문화기술진흥원)</sub><br>- Physics-based height map for virtual soap bubble rendering</div>
+                                <div><sub>(KCI / 국제문화기술진흥원)</sub><br>- Bubble Art in Realistic Content</div>
+                                <div><sub>(Proc / 한국정보처리학회)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div>
+</p>
                         </div>
                     </div>
 
