--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
@@ -49,7 +49,7 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
-            <section class="resume-section" id="about">
+            <section class="resume-section" id="home">
                 <div class="resume-section-content">
                     <h1 class="mb-0" style="font-family: Saira Extra Condensed">
                         SANGWOOK
@@ -81,7 +81,7 @@
                             <div><a href="https://skmulti.sungkyul.ac.kr/">미디어소프트웨어학과</a> · 미디어소프트웨어공학전문</div>
                             <p>전체 평점평균: 4.09 / 4.5<br>전공 평점평균: 4.12 / 4.5</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2016.03 - 2021.02</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2016.03 - 현재</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -140,10 +140,9 @@
                             <h3 class="mb-0">눈문실적</h3>
                             <div class="mb-3"></div>
                             <p><div><sub>(SCI / Taylor & Francis)</sub><br>- Physically based soap bubble synthesis for VR</div>
+                                <div><sub>(KCI / 국제문화기술진흥원)</sub><br>- Background context and Kelvin Temperature-based Soap Bubble Rendering</div>
                                 <div><sub>(KCI / 국제문화기술진흥원)</sub><br>- Physics-based height map for virtual soap bubble rendering</div>
-                                <div><sub>(KCI / 국제문화기술진흥원)</sub><br>- Bubble Art in Realistic Content</div>
-                                <div><sub>(Proc / 한국정보처리학회)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div>
-</p>
+                                <div><sub>(Proc / 한국정보처리학회)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div></p>
                         </div>
                     </div>
 
@@ -172,12 +171,13 @@
                             <div class="mb-3">Xicom Lab. 한국연구재단 기초연구 (3년차 연구)<br>
                                 <a href="#projects">ongoing project</a></div>
                             <p>물리기반 비눗방울 렌더링으로 구현된 버블아트 팹랩 시스템입니다.
+                                <br>- 개발언어: C#
                                 <br>- 개발환경: Unity 3D 2019.3.5 · HTC VIVE · Leap Motion
                                 <br>- 개발도구: Shader Graph · Steam VR
                                 <br>- 개발인원: 3명
                                 <br>- 의사소통: 주간 세미나 · Zoom Meetings
-                                <br>- 나의역할: PBR, VR/AR, 컨텍스트
-                                <br>- 달성성과: 물리기반 비눗방울 렌더링 구현 · 논문게재</p>
+                                <br>- 나의역할: PBR, VR/AR, Fab Lab.
+                                <br><span class="text-primary"><sub>#물리기반 비눗방울 렌더링 구현 #논문게재</sub></span></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020.01.06 - 현재</span></div>
                     </div>
@@ -189,12 +189,13 @@
                                 <a href="#projects">video</a> · 
                                 <a href="#projects">github</a></div>
                              <p>플레이어가 직접 상호작용이 가능한 체험형 멀티플레이 VR동화입니다.
+                                <br>- 개발언어: C#
                                 <br>- 개발환경: Unity 3D 2019.3.5 · HTC VIVE
-                                <br>- 개발도구: Steam VR
+                                <br>- 개발도구: Photon Unity Networking 2.0 · Steam VR
                                 <br>- 개발인원: 4명
                                 <br>- 의사소통: 한이음 팀블로그 · gitlab · Discord
                                 <br>- 나의역할: PM, VR, 멀티플레이
-                                <br>- 달성성과: 논문게재 · 프로그램 등록 · 한이음 공모전 · 한이음 학술대회  · 한이음 인기상 · 정보처리학회 추계학술대회</p>
+                                <br><span class="text-primary"><sub>#논문게재 #프로그램 등록 #한이음 공모전 #한이음 학술대회 #한이음 인기상 #정보처리학회 추계학술대회</sub></span></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020.05.13 - 2020.11.30</span></div>
                     </div>
@@ -207,8 +208,26 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
+                    <div class="mb-2">Development Languages & Tools</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            C / C++ / C#
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            HTML5 / CSS3 / JS
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            MS SQL
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Unity 3D
+                        </li>
+                    </ul>
+                    <!--ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-cuttlefish"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -216,14 +235,10 @@
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="fas fa-database"></i></li>
                         <li class="list-inline-item"><i class="fab fa-unity"></i></li>
-                    </ul>
-
-                    <div class="mb-3">Library</div>
+                    </ul-->
+                    <br>
+                    <div class="mb-2">Library</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Shader Graph
-                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             OpenCV
@@ -267,10 +282,6 @@
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>최우수상 - 창의융합 튜터링</div>
                         </li>
                         <li>
-                            <div><sub>(미디어소프트웨어학과 / 2019.10.24)</sub><br>
-                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>장려상 - VGA 콘텐츠 기획 해커톤 경진대회</div>
-                        </li>
-                        <li>
                             <div><sub>(한국정보통신진흥협회 / 2015.03.20)</sub><br>
                                 <span class="fa-li"><i class="fas fa-award text-warning"></i></span>DIAT Expert 예비강사</div>
                         </li>
@@ -282,7 +293,7 @@
         <!-- Footer-->
         <footer>
             <center>
-                <br>Copyright 2021. SANGWOOK YOO. All rights reserved.
+                <br>Copyright 2021. SANGWOOK YOO | All rights reserved.
             <div class="social-icons"><br>
                 <a class="js-scroll-trigger" href="#page-top"><i class="fa fa-chevron-up"></i></a>
             </div></center><br>
