--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
                             <div class="mb-3">Xicom Lab. 한국연구재단 기초연구 (3년차 연구)<br>
                                 <a href="#projects">ongoing project</a></div>
                             <p>물리기반 비눗방울 렌더링으로 구현된 버블아트 팹랩 시스템입니다.
-                                <br>- 개발언어: C#
-                                <br>- 개발환경: Unity 3D 2019.3.5 · HTC VIVE · Leap Motion
-                                <br>- 개발도구: Shader Graph · Steam VR
+                                <br>- 개발환경: Windwos 10 · C#
+                                <br>- 개발도구: Unity 3D 2019.3.5
                                 <br>- 개발인원: 3명
-                                <br>- 의사소통: 주간 세미나 · Zoom Meetings
+                                <br>- 디바이스: HTC VIVE PRO
+                                <br>- 협업도구: 주간 세미나 · Zoom Meetings
                                 <br>- 나의역할: PBR, VR/AR, Fab Lab.
                                 <br><span class="text-primary"><sub>#물리기반 비눗방울 렌더링 구현 #논문게재</sub></span></p>
                         </div>
@@ -189,11 +189,11 @@
                                 <a href="#projects">video</a> · 
                                 <a href="#projects">github</a></div>
                              <p>플레이어가 직접 상호작용이 가능한 체험형 멀티플레이 VR동화입니다.
-                                <br>- 개발언어: C#
-                                <br>- 개발환경: Unity 3D 2019.3.5 · HTC VIVE
-                                <br>- 개발도구: Photon Unity Networking 2.0 · Steam VR
+                                <br>- 개발환경: Windwos 10 · C#
+                                <br>- 개발도구: Unity 3D 2019.3.5
                                 <br>- 개발인원: 4명
-                                <br>- 의사소통: 한이음 팀블로그 · gitlab · Discord
+                                <br>- 디바이스: HTC VIVE COSMOS ELITE
+                                <br>- 협업도구: 한이음 팀블로그 · gitlab · Discord
                                 <br>- 나의역할: PM, VR, 멀티플레이
                                 <br><span class="text-primary"><sub>#논문게재 #프로그램 등록 #한이음 공모전 #한이음 학술대회 #한이음 인기상 #정보처리학회 추계학술대회</sub></span></p>
                         </div>
