--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">성결대학교</h3>
                             <div class="mb-3">Sungkyul University</div>
-                            <div><a href="https://skmulti.sungkyul.ac.kr/">미디어소프트웨어학과</a> · 미디어소프트웨어공학전문</div>
+                            <div><a href="https://skmulti.sungkyul.ac.kr/" target="_blank">미디어소프트웨어학과</a> · 미디어소프트웨어공학전문</div>
                             <p>전체 평점평균: 4.09 / 4.5<br>전공 평점평균: 4.12 / 4.5</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2016.03 - 현재</span></div>
@@ -116,7 +116,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Xicom Lab.</h3>
-                            <div class="mb-3">학부연구생 · <a href="http://xicomlab.re.kr">homepage</a></div>
+                            <div class="mb-3">학부연구생 · <a href="http://xicomlab.re.kr" target="_blank">homepage</a></div>
                             <p>성결대학교 Visual Computing 연구실입니다.
                                 <br>- 지도교수: 미디어소프트웨어학과 진성아 교수
                                 <br>- 참여연구: 버블아트 XR 팹랩재현을 위한 물리기반 시·촉각 렌더링</p>
@@ -127,7 +127,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">한이음</h3>
-                            <div class="mb-3">ICT멘토링 멘티 · <a href="https://www.hanium.or.kr/portal/index.do">homepage</a></div>
+                            <div class="mb-3">ICT멘토링 멘티 · <a href="https://www.hanium.or.kr/portal/index.do" target="_blank">homepage</a></div>
                             <p>ICT기업전문가(멘토)와 팀을 이루어 프로젝트를 수행하는 ICT실무 역량 향상 멘토링 프로그램입니다.
                                 <br>- 지도멘토: 전자부품연구원 최효섭 책임연구원
                                 <br>- 프로젝트: 가상현실 기술을 활용한 동화 체험 시스템</p>
@@ -186,8 +186,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">가상현실 기술을 활용한 동화 체험 시스템</h3>
                             <div class="mb-3">과학기술정보통신부 한이음 ICT멘토링 프로젝트<br>
-                                <a href="#projects">video</a> · 
-                                <a href="#projects">github</a></div>
+                                <a href="https://youtu.be/rBowxEFV-h0" target="_blank">video</a> · 
+                                <a href="https://github.com/SangwookYoo/fairytaleVR-unity" target="_blank">github</a></div>
                              <p>플레이어가 직접 상호작용이 가능한 체험형 멀티플레이 VR동화입니다.
                                 <br>- 개발환경: Windwos 10 · C#
                                 <br>- 개발도구: Unity 3D 2019.3.5
