--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">눈문실적</h3>
                             <div class="mb-3"></div>
-                            <p><div><sub>(SCI / Taylor & Francis)</sub><br>- Physically based soap bubble synthesis for VR</div>
-                                <div><sub>(KCI / 국제문화기술진흥원)</sub><br>- Background context and Kelvin Temperature-based Soap Bubble Rendering</div>
-                                <div><sub>(KCI / 국제문화기술진흥원)</sub><br>- Physics-based height map for virtual soap bubble rendering</div>
-                                <div><sub>(Proc / 한국정보처리학회)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div></p>
+                            <p><div><sub>(SCI / MDPI, Applied sciences IF 2.474)</sub><br>- (summited) Physically based soap bubble synthesis for VR</div>
+                                <div><sub>(KCI / 국제문화기술진흥원, IJCC)</sub><br>- Background context and Kelvin Temperature-based Soap Bubble Rendering</div>
+                                <div><sub>(KCI / 국제문화기술진흥원, IJACT)</sub><br>- Physics-based height map for virtual soap bubble rendering</div>
+                                <div><sub>(Proc / 한국정보처리학회, 추계학술대회)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div></p>
                         </div>
                     </div>
 
