--- a/index.html
+++ b/index.html
@@ -139,10 +139,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">눈문실적</h3>
                             <div class="mb-3"></div>
-                            <p><div><sub>(SCI / MDPI, Applied sciences IF 2.474)</sub><br>- (summited) Physically based soap bubble synthesis for VR</div>
+                            <p>
                                 <div><sub>(KCI / 국제문화기술진흥원, IJCC)</sub><br>- Background context and Kelvin Temperature-based Soap Bubble Rendering</div>
                                 <div><sub>(KCI / 국제문화기술진흥원, IJACT)</sub><br>- Physics-based height map for virtual soap bubble rendering</div>
-                                <div><sub>(Proc / 한국정보처리학회, 추계학술대회)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div></p>
+                                <div><sub>(Proc / 한국정보처리학회, 추계학술대회)</sub><br>- 가상현실 기술을 활용한 동화 체험 시스템</div>
+                                <div><sub>(SCI / MDPI, Applied sciences, IF 2.474)</sub><br>- (summited) Physically based soap bubble synthesis for VR</div>
+                            </p>
                         </div>
                     </div>
 
@@ -169,7 +171,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">버블아트 XR 팹랩 재현을 위한 물리기반 시·촉각 렌더링</h3>
                             <div class="mb-3">Xicom Lab. 한국연구재단 기초연구 (3년차 연구)<br>
-                                <a href="#projects">ongoing project</a></div>
+                                <a href="https://youtu.be/beHEdCKqRco" target="_blank">video</a></div>
                             <p>물리기반 비눗방울 렌더링으로 구현된 버블아트 팹랩 시스템입니다.
                                 <br>- 개발환경: Windwos 10 · C#
                                 <br>- 개발도구: Unity 3D 2019.3.5
