--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                 <br>- 개발도구: Unity 3D 2019.3.5
                                 <br>- 개발인원: 3명
                                 <br>- 디바이스: HTC VIVE PRO
-                                <br>- 협업도구: 주간 세미나 · Zoom Meetings
+                                <br>- 의사소통: 주간 세미나 · Zoom Meetings
                                 <br>- 나의역할: PBR, VR/AR, Fab Lab.
                                 <br><span class="text-primary"><sub>#물리기반 비눗방울 렌더링 구현 #논문게재</sub></span></p>
                         </div>
@@ -195,7 +195,7 @@
                                 <br>- 개발도구: Unity 3D 2019.3.5
                                 <br>- 개발인원: 4명
                                 <br>- 디바이스: HTC VIVE COSMOS ELITE
-                                <br>- 협업도구: 한이음 팀블로그 · gitlab · Discord
+                                <br>- 의사소통: 한이음 팀블로그 · gitlab · Discord
                                 <br>- 나의역할: PM, VR, 멀티플레이
                                 <br><span class="text-primary"><sub>#논문게재 #프로그램 등록 #한이음 공모전 #한이음 학술대회 #한이음 인기상 #정보처리학회 추계학술대회</sub></span></p>
                         </div>
