--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta property="og:image:width" content="1850" />
         <meta property="og:image:height" content="935" />
 
-        <title>멈추지 않는 개발자, 유상욱</title>
+        <title>유상욱의 포트폴리오</title>
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/unity.svg">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
 
-    <body id="page-top" data-spy="scroll" data-target=".site-navbar-target" data-offset="300" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+    <body id="page-top" data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -196,7 +196,7 @@
                                 <br>- 개발인원: 4명
                                 <br>- 디바이스: HTC VIVE COSMOS ELITE
                                 <br>- 의사소통: 한이음 팀블로그 · gitlab · Discord
-                                <br>- 나의역할: PM, VR, 멀티플레이
+                                <br>- 나의역할: PM, VR
                                 <br><span class="text-primary"><sub>#논문게재 #프로그램 등록 #한이음 공모전 #한이음 학술대회 #한이음 인기상 #정보처리학회 추계학술대회</sub></span></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020.05.13 - 2020.11.30</span></div>
@@ -238,7 +238,7 @@
                         <li class="list-inline-item"><i class="fas fa-database"></i></li>
                         <li class="list-inline-item"><i class="fab fa-unity"></i></li>
                     </ul-->
-                    <br>
+                    <!--br>
                     <div class="mb-2">Library</div>
                     <ul class="fa-ul mb-0">
                         <li>
@@ -250,7 +250,7 @@
                             OpenGL
                         </li>
                     </ul>
-                </div>
+                </div-->
             </section>
 
             <hr class="m-0" />
